--- a/config.json
+++ b/config.json
@@ -18,6 +18,7 @@
             "format": "sheets",
             "subformat": "csv",
             "files_dict": {
+                "workspace_data": "workspace_data",
                 "poll_data": "poll_data"
             }
         },
