--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run pipeline
+        env:
+          CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}
         run: python -m parenttext_pipeline.cli pull_data compile_flows
 
       - name: Publish output folder
